--- a/Weather.Web/Client/Pages/Index.razor
+++ b/Weather.Web/Client/Pages/Index.razor
@@ -1,9 +1,7 @@
-﻿@page "/"
+﻿@page "/Account/AccessDenied"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Forbidden</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Forbidden</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+You are not authorized to view this.
